--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,23 +1,15 @@
 @import "colors";
 @import "variables";
 @import "media";
+@import "defaults";
 @import "typography";
 @import "layouts/grid";
+@import "layouts/article";
 @import "scopes/default";
+@import "scopes/article";
 @import "components/button";
-
-html {
-  font-family: $font-default;
-  font-size: 16px;
-  word-spacing: 1px;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: border-box;
-  margin: 0;
-}
+@import "components/nav-link";
+@import "components/post";
+@import "components/post-list";
+@import "components/form-control";
+@import "components/input-group";
