--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -15,9 +15,34 @@
 }
 
 .no-decoration {
-  text-decoration: none;
+  text-decoration: none !important;
+}
+
+.text-center {
+  text-align: center !important;
 }
 
 .text-right {
-  text-align: right;
+  text-align: right !important;
 }
+
+%h1-subheading {
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 1.3;
+  color: rgba(map-get($darks, "purple"), 0.5);
+}
+%h2-subheading {
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 1.3333;
+  color: rgba(map-get($darks, "purple"), 0.5);
+  margin: 1rem 0 2rem;
+}
+%small-lede {
+  font-size: .9375rem;
+  line-height: 1.25;
+}
+.h1-subheading { @extend %h1-subheading; }
+.h2-subheading { @extend %h2-subheading; }
+.small-lede { @extend %small-lede; }
