--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -6,6 +6,12 @@
   display: inline-block;
   border: none;
 
+  &--md {
+    font-size: 1rem;
+    line-height: 1.25;
+    padding: 0.5rem 0.75rem;
+  }
+
   &--lg {
     font-size: 1.25rem;
     line-height: 1.2;
