--- a/assets/scss/components/_form-control.scss
+++ b/assets/scss/components/_form-control.scss
@@ -8,6 +8,10 @@
   border-radius: 0.5rem;
   box-shadow: 0rem 0.25rem 0.5rem -0.125rem rgba(black, 0.10), 0rem 0rem 0.0625rem rgba(black, 0.2);
 
+  &--block {
+    display: block;
+  }
+
   &:focus {
     outline: none;
     box-shadow: 0rem 0rem 0rem 0.25rem rgba(map-get($brand, "blue"), 0.5), 0rem 0.25rem 0.5rem -0.125rem rgba(black, 0.10), 0rem 0rem 0.0625rem rgba(black, 0.2)
