Update article and guide layout, add some images

--- a/assets/scss/scopes/_article.scss
+++ b/assets/scss/scopes/_article.scss
@@ -14,6 +14,10 @@
     margin-right: auto;
   }
 
+  img, figure {
+    max-width: 100%;
+  }
+
   p, li {
     font-size: 1.125rem;
     hyphens: auto;
