--- a/assets/scss/_defaults.scss
+++ b/assets/scss/_defaults.scss
@@ -80,3 +80,10 @@ h5, h6 {
     font-size: 2.5rem;
   }
 }
+
+hr {
+  height: 0.125rem;
+  background-image: url('~/assets/images/Prism/Gradient.svg');
+  border: none;
+  margin: 1rem 0;
+}
